--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
                 <div class="message-item-container w-100 display-none"></div>
             </div>
             
-            <div class="preview-message">
-
-            </div>
+            <div class="preview-message"></div>
         </div>
 
         <div class="footer">
