Add link to trash email
Preview and mail item in list will not be visible

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
                 </a>
                 <a id="2" onclick="showMessages(this)">Sent</a>
                 <a id="3" onclick="showMessages(this)">Draft</a>
-                <a id="4" onclick="showMessages(this)">Trash</a>
+                <a id="4" onclick="showMessages(this)">
+                    Trash
+                    <div class="delete-count"></div>
+                </a>
             </div>
             
             <div class="message-list display-flex">
